--- a/packages/fluent/scss/core/_variables.scss
+++ b/packages/fluent/scss/core/_variables.scss
@@ -59,6 +59,14 @@ $kendo-font-size-md: $kendo-font-size !default;
 $kendo-font-size-lg: 16px !default;
 $kendo-font-size-xl: 20px !default;
 
+$kendo-font-sizes: (
+    xs: $kendo-font-size-xs,
+    sm: $kendo-font-size-sm,
+    md: $kendo-font-size-md,
+    lg: $kendo-font-size-lg,
+    xl: $kendo-font-size-xl
+) !default;
+
 
 /// Font family across all components.
 $kendo-font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !default;
@@ -87,6 +95,17 @@ $kendo-border-radius: map.get( $kendo-spacing, 0.5 ) !default; // sass-lint:disa
 $kendo-border-radius-sm: math.div( $kendo-border-radius, 2 ) !default;
 $kendo-border-radius-md: $kendo-border-radius !default;
 $kendo-border-radius-lg: ( $kendo-border-radius * 2 ) !default;
+
+$kendo-border-radii: (
+    DEFAULT: var( --kendo-border-radius-md, $kendo-border-radius-md ),
+    0: 0,
+    sm: var( --kendo-border-radius-sm, $kendo-border-radius-sm ),
+    md: var( --kendo-border-radius-md, $kendo-border-radius-md ),
+    lg: var( --kendo-border-radius-lg, $kendo-border-radius-lg ),
+    none: 0,
+    full: 9999px
+) !default;
+
 
 // Metrics
 $kendo-padding-x: map.get( $kendo-spacing, 2 ) !default;
