--- a/packages/core/scss/styles/index.import.scss
+++ b/packages/core/scss/styles/index.import.scss
@@ -2,3 +2,11 @@
 @import "./_asp-fallback.scss";
 @import "./_layout";
 @import "./_normalize.scss";
+
+
+@mixin kendo-core--styles() {
+    @include kendo-core--styles--accessibility();
+    @include kendo-core--styles--asp-fallback();
+    @include kendo-core--styles--layout();
+    @include kendo-core--styles--normalize();
+}
