--- a/packages/default/scss/icons/_layout.scss
+++ b/packages/default/scss/icons/_layout.scss
@@ -5,6 +5,8 @@ $ki-icon-size: $kendo-icon-size;
 
 @include exports( "icons/layout" ) {
 
+    @include kendo-icon-styles();
+
     // Icon wrap
     .k-icon-wrap {
         flex: none;
