--- a/packages/bootstrap/scss/core/_index.scss
+++ b/packages/bootstrap/scss/core/_index.scss
@@ -17,3 +17,8 @@ $wcag-min-contrast-ratio: 4.5 !default;
 
 // Variables
 @import "../_variables.scss";
+
+// Expose
+@include exports("kendo-core-styles") {
+    @include kendo-core--styles();
+}
