--- a/packages/fluent/scss/icon/_layout.scss
+++ b/packages/fluent/scss/icon/_layout.scss
@@ -7,6 +7,8 @@
 
 @mixin kendo-icon--layout() {
 
+    @include index.kendo-icon-styles();
+
     // kendo-icon-wrapper component
     .k-icon-wrapper-host {
         display: contents;
