--- a/packages/nouvelle/scss/core/index.scss
+++ b/packages/nouvelle/scss/core/index.scss
@@ -14,3 +14,8 @@ $wcag-min-contrast-ratio: 4.5 !default;
 
 // Common styles
 @import "./styles/index.import.scss";
+
+// Expose
+@include exports("kendo-core-styles") {
+    @include kendo-core--styles();
+}
