--- a/packages/nouvelle/scss/icon/_layout.scss
+++ b/packages/nouvelle/scss/icon/_layout.scss
@@ -1,46 +1,84 @@
+$ki-embed-font: true;
+$ki-icon-size: $kendo-icon-size;
+
 @import "@progress/kendo-font-icons/scss/index.scss";
 
 @mixin kendo-icon--layout() {
 
-    .k-svg-icon {
+    @include kendo-icon-styles();
 
-        &.k-flip-h,
-        &.k-flip-v,
-        &.k-flip-h.k-flip-v {
-            transform: none;
-        }
+    // Icon wrap
+    .k-icon-wrap {
+        flex: none;
+        display: inline-flex;
+        flex-flow: row nowrap;
+        gap: 0;
+        align-items: center;
+        align-self: flex-start;
+        vertical-align: middle;
+        position: relative;
 
-        &.k-flip-h {
-            > svg {
-                transform: scaleX( -1 );
-            }
-        }
-
-        &.k-flip-v {
-            > svg {
-                transform: scaleY( -1 );
-            }
-        }
-
-        &.k-flip-h.k-flip-v {
-            > svg {
-                transform: scale( -1, -1 );
-            }
+        &::before {
+            content: "\200b";
+            width: 0;
+            overflow: hidden;
+            flex: none;
+            display: inline-block;
+            vertical-align: top;
         }
     }
 
+    // kendo-icon-wrapper component
+    .k-icon-wrapper-host {
+        display: contents;
+    }
 
-    // Icon with modifier
     .k-icon-with-modifier {
         position: relative;
+        margin: .25em;
     }
 
     .k-icon-modifier {
-        font-size: .5em;
         position: absolute;
+        font-size: .5em;
         bottom: 0;
         right: 0;
-        transform: translate( 50%, -50% );
+        margin: 0 -.5em -.5em 0;
+    }
+
+    .k-i-none::before {
+        content: "";
+        display: none;
+    }
+
+    .k-icon-action {
+        // padding: $kendo-icon-padding;
+        cursor: pointer;
+    }
+
+    // RTL icons
+    .k-rtl .k-i-indent-increase,
+    .k-rtl .k-i-indent-decrease,
+    .k-rtl .k-i-expand,
+    .k-rtl .k-i-collapse,
+    [dir="rtl"] .k-i-expand,
+    [dir="rtl"] .k-i-collapse {
+        transform: scaleX(-1);
+    }
+
+    .k-sprite {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        overflow: hidden;
+        background-repeat: no-repeat;
+        font-size: 0;
+        line-height: 0;
+        text-align: center;
+    }
+
+    .k-image {
+        display: inline-block;
     }
 
 }
