--- a/packages/fluent/scss/pager/_layout.scss
+++ b/packages/fluent/scss/pager/_layout.scss
@@ -166,8 +166,8 @@
 
     // Pager refresh
     .k-pager-refresh {
-        @extend %base-pager-item;
         margin-inline-start: auto;
+        color: inherit;
         order: 10;
     }
 
