--- a/packages/default/scss/fab/_theme.scss
+++ b/packages/default/scss/fab/_theme.scss
@@ -4,7 +4,7 @@
     @each $name, $color in $kendo-fab-theme-colors {
         .k-fab-solid-#{$name} {
             @include box-shadow($kendo-fab-shadow);
-            outline: $kendo-fab-border-width solid $color;
+            outline: $kendo-fab-border-width $kendo-fab-outline-style $color;
             outline-offset: -$kendo-fab-border-width;
             border-color: $color;
             color: k-contrast-legacy( $color );
@@ -28,9 +28,7 @@
             @if $kendo-enable-focus-contrast {
                 @include box-shadow( inset 0 0 0 2px currentColor );
             } @else {
-                outline-style: solid;
-                outline-width: 2px;
-                outline-color: rgba( $color, .3 );
+                outline: $kendo-fab-outline-style $kendo-fab-outline-width rgba( $color, .3 );
             }
         }
     }
@@ -74,7 +72,7 @@
             $kendo-fab-item-icon-border
         );
         @include box-shadow($kendo-fab-item-shadow);
-        outline: $kendo-fab-border-width solid rgba(0, 0, 0, .08);
+        outline: $kendo-fab-border-width $kendo-fab-item-outline-style $kendo-fab-item-outline-color;
         outline-offset: -$kendo-fab-border-width;
     }
 
@@ -93,9 +91,7 @@
         @if $kendo-enable-focus-contrast {
             @include box-shadow( inset 0 0 0 2px if( $kendo-is-dark-theme, $kendo-color-white, $kendo-color-black ) );
         } @else {
-            outline-style: solid;
-            outline-width: 2px;
-            outline-color: rgba(0, 0, 0, .08);
+            outline: $kendo-fab-item-outline-style $kendo-fab-item-outline-width $kendo-fab-item-outline-color;
         }
     }
 
