--- a/packages/default/scss/floating-label/_layout.scss
+++ b/packages/default/scss/floating-label/_layout.scss
@@ -18,7 +18,7 @@
         }
 
         > .k-label {
-            max-width: 90%;
+            max-width: $kendo-floating-label-max-width;
             font-size: $kendo-floating-label-font-size;
             line-height: $kendo-floating-label-line-height;
             white-space: nowrap;
