fix(drawer): fix svg-icon misplacement inside drawer items

--- a/packages/default/scss/drawer/_layout.scss
+++ b/packages/default/scss/drawer/_layout.scss
@@ -150,6 +150,7 @@
             gap: $kendo-drawer-item-padding-x;
         }
 
+        .k-svg-icon,
         .k-icon {
             height: auto;
             font-size: $kendo-drawer-icon-size;
