--- a/packages/fluent/scss/drawer/_layout.scss
+++ b/packages/fluent/scss/drawer/_layout.scss
@@ -183,6 +183,7 @@
             gap: var( --kendo-drawer-item-padding-x, #{$kendo-drawer-item-padding-x} );
         }
 
+        .k-svg-icon,
         .k-icon {
             height: auto;
             font-size: var( --kendo-drawer-icon-size, #{$kendo-drawer-icon-size} );
